--- a/JavaCollection/nbproject/project.properties
+++ b/JavaCollection/nbproject/project.properties
@@ -36,7 +36,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.gson.classpath}
+    ${libs.gson.classpath}:\
+    ${libs.GSON_2.8.2.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=JavaCollection
-main.class=tes.Tes
+main.class=tes.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
